2005-11-28  David Hampton  <hampton@employees.org>

	* src/import-export/qif-import/druid-qif-import.c: Need to escape
	user input string to prevent errors from gtk.

	* src/gnome-utils/gnc-main-window.c:
	* Makefile.am:
	* TRANSLATORS: Fix the translator credits in the gtk2.6 about box.
	They should come from the translation, not a static file.

	* src/gnome-utils/gnc-gui-query.glade: Mark a couple of strings as
	not needing translation.

2005-11-27  David Hampton  <hampton@employees.org>

	*src/gnome-utils/druid-gconf-setup.glade: Make the capitalization
	consistent across the titles of all pages.

	* src/backend/file/io-gncbin-r.c:
	* src/backend/file/gnc-pricedb-xml-v2.c:
	* src/backend/file/io-gncxml-v1.c:
	* src/backend/postgres/price.c:
	* src/engine/gnc-pricedb.[ch]:
	* src/engine/gnc-pricedb-p.h: Better integrate stock prices with
	QOF.  Gnucash now warns you about unsaved stock price changes.

2005-11-26  David Hampton  <hampton@employees.org>

	* src/gnome/gnc-plugin-page-register.c: Change "Reverse
	Transaction" menu item to be "Add Reversing Transaction".

	* src/gnome/gnc-plugin-page-register.c: Eliminate extra redrawing
	of the register by suspending events around the entire reverse
	transaction operation.  Speed up the command significantly.

	* src/engine/Transaction.c: Initialize the qof entity in the new
	split, not the old one.

2005-11-25  David Hampton  <hampton@employees.org>

	* src/business/dialog-tax-table/dialog-tax-table.c: Andreas
	Köhler's patch to prevent a patch when trying to edit a
	non-existent tax table entry.

	* src/register/ledger-core/dialog-dup-trans.c:
	* src/gnome/glade/register.glade: Fix the duplicate transaction
	dialog so that the "Enter" key activates the dialog box.  Fixes
	104496.

	* src/gnome-utils/gnc-date-edit.[ch]:
	* src/gnome/window-reconcile.c:
	* src/gnome-search/search-date.c: Update function name to match
	its g2 implementation.

	* src/gnome-utils/dialog-commodity.c: Consistently use the string